--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,8 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=TA-Trabalho-Model
+application.vendor=ws
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +28,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/TA-Trabalho-Model.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.all-themes-1.0.10.jar=lib\\all-themes-1.0.10.jar
 file.reference.javax.faces-2.2.12.jar=lib\\javax.faces-2.2.12.jar
@@ -39,8 +42,7 @@ javac.classpath=\
     ${file.reference.postgresql-9.4-1201.jdbc41.jar}:\
     ${file.reference.primefaces-5.2.jar}:\
     ${libs.Hibernate_jPA_2.1_4.3.10.classpath}:\
-    ${libs.Hibernate_Validator_5.1.3.classpath}:\
-    ${libs.hibernate4-persistence.classpath}
+    ${libs.Hibernate_Validator_5.1.3.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
